--- a/index.html
+++ b/index.html
@@ -10,34 +10,45 @@
   <main>
     <article>
       <header>
+        <hr>
         <h1 class="CV">Dmitry Ananyev CV</h1>
-        <p>=======================</p>
+        <hr>
       </header>
-      <div class="container">
+      <div class="block container">
         <img src="/img/cv_photo.jpg" class="photo" alt="Candidate photo">
         <ol class="numbers">
-          <li class="name">Name: Dmitry Ananyev 25.01.1990</li>
-          <li class="contacts">Contacts:
+          <li class="name section">Name:
+            <div class="line">Dmitry Ananyev
+              <label for="start">Birthday:</label>
+
+              <input type="date" id="start" name="trip-start"
+                    value="1990-01-25"
+                    min="2018-01-01" max="2018-12-31">
+            </div>
+          </li>
+          <li class="contacts section">Contacts:
             <ul class="contacts-info">
-              <li>**Telegramm/WhatsApp**: +375445619919</li>
+              <li>Telegramm/WhatsApp:
+                <a href="tel:+375445619919">+375445619919</a>
+              </li>
               <li>Mail:
-                <a href = "mailto: dimit999d@gmail.com">dimit999d@gmail.com</a>
+                <a href="mailto:dimit999d@gmail.com">dimit999d@gmail.com</a>
               </li>
               <li>Linkedin:
                 <a href="https://www.linkedin.com/in/dmitry--ananyev/" target="_blank">dmitry--ananyev</a>
               </li>
             </ul>
           </li>
-          <li>The main goal:
-            <p>I have more than 9 years of experience in the IT-sphere. More than 5 years I worked as a QA engineer (I have started as a simple QA engineer, after that, I was a QA manager), but all this time I thought about programming. So after learning of Python I have started to work as an Automation QA engineer and QA Lead. I have an amazing experience for now (I know how to create automated tests for WEB app, mobile web app (Android/IOS), how to work with Native apps, how to work with microservices, etc). But all this time I thought about development. I know everything from the QA side, now I want to look at what happens on dev side. I like to code, I want to spend all my time to write real programs. + 100% I will write good code, I am a QA, I am sure that it will help me to write a good program and help a company to earn money. I know that need to learn a lot, I have already finished some courses connected with JS, I ready to learn more. I spend all my free time on it. And now I have an amazing opportunity to show it.</p>
+          <li class="goals section">The main goal:
+            <div class="line">I have more than 9 years of experience in the IT-sphere. More than 5 years I worked as a QA engineer (I have started as a simple QA engineer, after that, I was a QA manager), but all this time I thought about programming. So after learning of Python I have started to work as an Automation QA engineer and QA Lead. I have an amazing experience for now (I know how to create automated tests for WEB app, mobile web app (Android/IOS), how to work with Native apps, how to work with microservices, etc). But all this time I thought about development. I know everything from the QA side, now I want to look at what happens on dev side. I like to code, I want to spend all my time to write real programs. + 100% I will write good code, I am a QA, I am sure that it will help me to write a good program and help a company to earn money. I know that need to learn a lot, I have already finished some courses connected with JS, I ready to learn more. I spend all my free time on it. And now I have an amazing opportunity to show it.</div>
           </li>
-          <li>Skills:
-            <p>Technical stack:
+          <li class="skills section">Skills:
+            <div>Technical stack:
               <ul class="tech-skills">
                 <li>Development language: Python, JS (Only started);</li>
               </ul>
-            </p>
-            <p>For python:
+            </div>
+            <div>For python:
               <ul class="tech-skills-python">
                 <li>Tools/libraries for working with interfaces (API, database, GUI, etc.) - pytest, allure, hamcrest, axe, locust;</li>
                 <li>Tools for organizing and running tests (PyTest, RobotFramework, etc.) - pytest;</li>
@@ -45,18 +56,18 @@
                 <li>Report generation tools - allure, html;</li>
                 <li>Run of autotests on pipeline(GIT), mobile devices (Android, iOS: via Appium);</li>
               </ul>
-            </p>
-            <p>Additional responsibilities on previous projects:
+            </div>
+            <div>Additional responsibilities on previous projects:
               <ul class="responsibilities">
                 <li>Communication between governments/customers and journeys about releases;</li>
                 <li>Quality control of more than 10 projects/journeys -> ~ 30+ people;</li>
                 <li>Quality control: Front-end/Back-end (automation scripts) (Desktop/Mobile view), Back-end(API), responsiveness, Native apps;</li>
                 <li>Interview with newcomers.</li>
               </ul>
-            </p>
+            </div>
           </li>
-          <li>Code examples/Projects:
-            <p>I can't show python code, because it is forbidden, it is real projects. About JS I can show - I did it in my previous courses:
+          <li class="code-examples section">Code examples/Projects:
+            <div>I can't show python code, because it is forbidden, it is real projects. About JS I can show - I did it in my previous courses:
               <ul class="projects">
                 <li>
                   <a href="https://github.com/dimit999/JSPortfolio" target="_blank">js-portfolio</a>
@@ -68,15 +79,15 @@
                   <a href="https://github.com/dimit999/instagramApp" target="_blank">instagram</a>
                 </li>
               </ul>
-            </p>
+            </div>
           </li>
-          <li>Education:
-              <ul class="education">
-                <li>**Education organization**: The Belarusian State Academy of Telecommunications</li>
-                <li>**Speciality**: Telecommunications networks</li>
-                <li>**Qualification awarded**: Telecommunications engineer</li>
+          <li class="education section">Education:
+              <ul class="edu">
+                <li>Education organization: The Belarusian State Academy of Telecommunications</li>
+                <li>Speciality: Telecommunications networks</li>
+                <li>Qualification awarded: Telecommunications engineer</li>
               </ul>
-              <p>Udemy courses:</p>
+              <div>Udemy courses:</div>
               <ul class="courses">
                 <li>
                   <a href="https://www.udemy.com/course/beginner-python3-tutorials/learn/lecture/1491926?start=0" target="_blank">python3</a>
@@ -89,14 +100,12 @@
                 </li>
               </ul>
           </li>
-          <li>
-            English:
-            <p>For now, I live and work in Abu Dhabi (2 years). I have good practice in communication (Upper-intermediate). I know that I have mistakes in my grammar, I will tune it when I will work only with JS, because for now I don't have time :) Need to work on a job, need to learn JS.</p>
+          <li class="english section">English:
+            <div class="line">For now, I live and work in Abu Dhabi (2 years). I have good practice in communication (Upper-intermediate). I know that I have mistakes in my grammar, I will tune it when I will work only with JS, because for now I don't have time :) Need to work on a job, need to learn JS.</div>
           </li>
         </ol>
       </div>
-
-      <footer></footer>
+      <footer class="footer"></footer>
   </article>
   </main>
 
