fix: update link to см image in html file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <hr>
       </header>
       <div class="block container">
-        <img src="/img/cv_photo.jpg" class="photo" alt="Candidate photo">
+        <img src="img/cv_photo.jpg" class="photo" alt="Candidate photo">
         <ol class="numbers">
           <li class="name section">Name:
             <div class="line">Dmitry Ananyev
